veränderungen am cv

--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
 					<div>
 						<p>Geboren 14.01.2009 in Hamburg</p>
 						<p>Wohnort Ettingen | Baselland</p>
-						<p style="font-weight: bold;">Kontakt:</p>
+						<h4 >Kontakt:</h4>
 						<ul>
 							<li>Tel.: <a style="display: inline; text-decoration: underline; color: blue;">+41 77 499 29
 									79</a></li>
@@ -42,7 +42,8 @@
 									maximilian.kenner@bs.ch</a>
 							</li>
 						</ul>
-						<p>ich hab wirklich keine ahnung bitte helfen sie mir</p>
+						<h4>Adresse</h4>
+						<p style="margin-left: 20px;">Im Winkel 3, 4107 Ettingen</p>
 					</div>
 				</div>
 				<div class="rechtsCv">
