added cv content

--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
 						<p>Geboren 14.01.2009 in Hamburg</p>
 						<p>Wohnort Ettingen | Baselland</p>
 						<h4 >Kontakt:</h4>
-						<ul>
+						<ul style="padding-left: 25px;">
 							<li>Tel.: <a style="display: inline; text-decoration: underline; color: blue;">+41 77 499 29
 									79</a></li>
 							<li><a href="mailto:maximilian.kenner@bs.ch?subject=Geile website &
@@ -48,27 +48,29 @@
 				</div>
 				<div class="rechtsCv">
 					<h1>Maximilian Kenner</h1>
-					<div class="schulbildung">
 						<h3>Schulbildung</h3>
-						<ul class="schule">
-							<li>2021-2024</li>
-							<li>2019-2021</li>
-							<li>2017-2019</li>
-							<li>2015-2017</li>
-						</ul>
-						<ul class="schule2">
-							<li>Sekundarschule Binningen</li>
-							<li>Primarschule Konolfingen Stalden</li>
-							<li>Primarschule Grosshöchstetten</li>
-							<li>Grundschule Horneburg</li>
-						</ul>
-						<ul class="schule3">
-							<li>Sekundarstufe 1-3</li>
-							<li>Primarstufe 5-6</li>
-							<li>Primarstufe 3-4</li>
-							<li>Primarstufe 1-2</li>
-						</ul>
-					</div>
+						<table class="schulbildung">
+							<tr>
+								<td>2021-2024</td>
+								<td>Sekundarstufe 1-3</td>
+								<td>Sekundarschule Binningen</td>
+							</tr>
+							<tr>
+								<td>2019-2021</td>
+								<td>Primarstufe 5-6</td>
+								<td>Primarschule konolfingen Stalden</td>
+							</tr>
+							<tr>
+								<td>2017-2019</td>
+								<td>Primarstufe 3-4</td>
+								<td>Primarschule Grosshöchstetten</td>
+							</tr>
+							<tr>
+								<td>2015-2017</td>
+								<td>Primarstufe 1-2</td>
+								<td>Grundschule Horneburg</td>
+							</tr>
+						</table>
 					<h3>Kenntnisse</h3>
 					<div class="Kenntnisse">
 						<div class="spalte1">
