--- a/cv.html
+++ b/cv.html
@@ -72,22 +72,26 @@
 							</tr>
 						</table>
 					<h3>Kenntnisse</h3>
-					<div class="Kenntnisse">
-						<div class="spalte1">
-							<h4>Sprachen</h4>
-							<p></p>
-							<p></p>
-							<p></p>
-							<h4>IT Kenntnisse</h4>
-						</div>
-						<div class="spalte2">
-							<p>Deutsch- Muttersprache</p>
-							<p>Englisch- Gut</p>
-							<p>Russisch- Gut</p>
-							<p style="margin-bottom: 10px;">Französisch- Schulische kenntnisse</p>
-							<p>html / css basics</p>
-							<p></p>
-						</div>
+					<div class="kenntnisse">
+						<table>
+							<tr>
+								<td rowspan="4"><h4>Sprachen</h4></td>
+								<td>Deutsch- Muttersprache</td>
+							</tr>
+							<tr>
+								<td>Englisch- gut</td>
+							</tr>
+							<tr>
+								<td>Russisch- gut</td>
+							</tr>
+							<tr>
+								<td>Französisch- Schulische Kenntnisse</td>
+							</tr>
+							<tr>
+								<td><h4>IT Kenntnisse</h4></td>
+								<td>html/ css basics</td>
+							</tr>
+						</table>
 					</div>
 					<h3>Interessen und Freizeit</h3>
 					<div class="hobbys">
