centered bild text

--- a/cv.html
+++ b/cv.html
@@ -26,9 +26,9 @@
 			<div class="mitteCv">
 				<div class="linksCv">
 					<div class="bildCv">
-						<div class="waza" id="wazaId">Bild</div>
+						
 						<img onmouseleave="cvBildBack(ka, wazaId)" onmouseenter="cvBild(ka, wazaId)"
-							src="bilder/blau.jpeg" id="ka">
+							src="bilder/blau.jpeg" id="ka"><div class="waza" id="wazaId">Bild</div>
 					</div>
 					<div>
 						<p>Geboren 14.01.2009 in Hamburg</p>
