--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@
 				<a href="galerie.html" class="galerie" style="margin-left: 0;">Galerie</a>
 			</section>
 		</section>
-		<section class="teilUnten" style="grid-template-columns: 1fr 50vw 1fr;">
+		<section class="teilUnten" style="grid-template-columns: auto 60vw auto;">
 			<div class="mitteCv">
 				<div class="linksCv">
 					<div class="bildCv">
