--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<a target="_blank" href="https://dap.bs.ch/Citrix/DAPProdMixedWeb/">dab.bs.ch</a>
 				<a target="_blank" href="https://monkeytype.com/">Monkeytype</a>
 			</ul>
-			<img src="bilder/citrix.png" class="bild">
+			<span class="bild"></span>
 		</div>
 		
 	</footer>
