device width fix

--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Max</title>
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<meta name="viewport" content="device-width, initial-scale=1.0">
 </head>
 
 <body>
