--- a/monkeytype.html
+++ b/monkeytype.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Max</title>
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<meta name="viewport" content="device-width, initial-scale=1.0">
 </head>
 
 <body>
